Fixed text sizes on mobile devices

--- a/app/components/ClearButton/ClearButton.module.css
+++ b/app/components/ClearButton/ClearButton.module.css
@@ -1,6 +1,6 @@
 .button {
   width: 100%;
-  max-width: 220px;
+  max-width: 180px;
   background-color: var(--color-1);
   border: 2px solid var(--color-3);
   color: var(--color-5);
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 12px;
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
@@ -18,4 +18,11 @@
 
 .button:hover {
   border-color: var(--success-color);
+}
+
+@media screen and (min-width: 768px) {
+  .button {
+    max-width: 220px;
+    font-size: 1.1em;
+  }
 }
