--- a/app/components/InputField/InputField.module.css
+++ b/app/components/InputField/InputField.module.css
@@ -1,12 +1,12 @@
 .input {
   width: 100%;
-  max-width: 220px;
+  max-width: 180px;
   padding: 10px 12px;
   border-radius: 12px;
   color: var(--color-5);
   background-color: var(--color-1);
   text-transform: uppercase;
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: 700;
   border: 2px solid var(--color-3);
   cursor: pointer;
@@ -29,4 +29,11 @@
 .input:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+}
+
+@media screen and (min-width: 768px) {
+  .input {
+    max-width: 220px;
+    font-size: 1.1em;
+  }
 }
