--- a/app/components/LocationButton/LocationButton.module.css
+++ b/app/components/LocationButton/LocationButton.module.css
@@ -1,6 +1,6 @@
 .button {
   width: 100%;
-  max-width: 220px;
+  max-width: 180px;
   background-color: var(--color-1);
   border: 2px solid var(--color-3);
   color: var(--color-5);
@@ -10,7 +10,7 @@
   justify-content: center;
   gap: 8px;
   border-radius: 12px;
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
@@ -29,4 +29,11 @@
 .button svg {
   width: 15px;
   height: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .button {
+    max-width: 220px;
+    font-size: 1.1rem;
+  }
 }
