--- a/app/components/Select/Select.module.css
+++ b/app/components/Select/Select.module.css
@@ -1,14 +1,14 @@
 .select {
   font-family: var(--main-font);
   width: 100%;
-  max-width: 300px;
+  max-width: 180px;
   padding: 9px 12px;
   border-radius: 12px;
   background-color: var(--color-1);
   border: 2px solid var(--color-3);
   color: var(--color-5);
   text-transform: uppercase;
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: 700;
   cursor: pointer;
   outline: none;
@@ -16,4 +16,12 @@
 
 .select:focus {
   border-color: var(--success-color);
+}
+
+@media screen and (min-width: 768px) {
+  .select {
+    width: 100%;
+    max-width: 300px;
+    font-size: 1.1em;
+  }
 }
